# django-templated-email

./: pyproject.toml  tox.ini
tests/: test_views.py
