[tool.poetry]
name = "django-templated-email"
version = "3.0"
description = "A Django oriented templated / transaction email abstraction"
authors = [
    "Bradley Whittington <radbrad182@gmail.com>",
    "Aaron DeVore <adevore@pdx.edu>"
]
license = "MIT"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Framework :: Django',
    'Framework :: Django :: 2.0',
    'Framework :: Django :: 2.1',
    'Framework :: Django :: 2.2',
    'Framework :: Django :: 3.0',
    'Framework :: Django :: 3.1',
]
readme = "README.rst"
packages = [
    { include = "templated_email" }
]

[tool.poetry.dependencies]
python = "^3.6"
django-render-block = "^0.8.1"
six = ">=1"
html2text = {version = ">=2020.1.16", optional = true}

# Testing
django-anymail = {version = "^8.1", optional = true}
pytest-django = {version = "^4.1.0", optional = true}
mock = {version = "^4.0.2", optional = true}
django-pytest = {version = "^0.2.0", optional = true}
tox = {version = "^3.20.1", optional = true}
pytest = {version = "^6.1.2", optional = true}
pytest-pythonpath = {version = "^0.7.3", optional = true}
pytest-cov = {version = "^2.10.1", optional = true}
coveralls = {version = "*", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
tests = [
    "django-anymail",
    "pytest-django",
    "mock",
    "django-pytest",
    "tox",
    "pytest",
    "pytest-pythonpath",
    "pytest-cov",
    "coveralls",
    "html2text",
]
autoplain = ["html2text"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
